@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19900523
+MANIFEST for ded, version t19900727
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
